syntax="proto3";

package calculator;

option go_package = "github.com/vairarchi/go-grpc-learning/calculator/proto";

message PrimeRequest {
    int64 one_number = 1;
}

message PrimeResponse {
    int64 result = 1;
}
